# eud

./: .gitignore  Cargo.toml  LICENSE  Notes.md  ReadMe.md  flake.nix  shell.nix
src/: lib.rs  main.rs
src/lib/: cli.rs  client.rs  clients.rs  config.rs  daemons.rs  mod.rs
standard_styled/: Cargo.toml
standard_styled/src/: lib.rs
