[package]
name = "eud"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eud"
path = "src/main.rs"

[lib]
name = "eud"
path = "src/lib/mod.rs"

[build]
rustflags = ["-Clink-arg=-fuse-ld=lld"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
config = "0.13.3"
sysinfo = "0.28.4"


# stuff you need:
# nix-shell -p pkgs.darwin.IOKit
# wtf.
