[package]
name = "eud"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eud"
path = "src/main.rs"

[lib]
name = "eud"
path = "src/lib/mod.rs"

[build]
rustflags = ["-Clink-arg=-fuse-ld=lld"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features=[ "derive" ] }
config = "0.13.3"
dirs = "5.0.0"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", features = ["process"] }


# stuff you need:
# nix-shell -p pkgs.darwin.IOKit
# wtf.
